<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="job.com.searchnearbyplaces.SearchActivity">


        <RadioGroup
            android:id="@+id/radioLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/radiofavourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_favourite"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_current" />

        </RadioGroup>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_below="@+id/radioLocation">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/search_layout"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_location"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/search_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_layout"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/action_search"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/list_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/list_txt"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"/>



    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_list_layout"
        class="com.google.android.gms.maps.SupportMapFragment"
        />

</RelativeLayout>
